--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 
 <body>
     <div id="wrap">
-        <img id="slider" src="images/f1.jpg">
+        <img id="slider" src="images/landscape-photography-tips-yosemite-valley-feature.webp">
     </div>
+    <img src="images/landscape-photography-tips-yosemite-valley-feature.webp" alt="" class="mini"><img
+    src="images/lanscape.jfif" alt="" class="mini"><img src="images/UK_advice-gardening-growing-poppies_header.jpg"
+    alt="" class="mini"><br>
     <button id="next">&gt;</button><br>
     <script src="script.js"></script>
 </body>
