Add radio buttons

--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@
         <img id="slider" src="images/landscape-photography-tips-yosemite-valley-feature.webp">
     </div>
     <img src="images/landscape-photography-tips-yosemite-valley-feature.webp" alt="" class="mini"><img
-    src="images/lanscape.jfif" alt="" class="mini"><img src="images/UK_advice-gardening-growing-poppies_header.jpg"
-    alt="" class="mini"><br>
+        src="images/lanscape.jfif" alt="" class="mini"><img src="images/UK_advice-gardening-growing-poppies_header.jpg"
+        alt="" class="mini"><br>
     <button id="next">&gt;</button><br>
+    <form action="" name="effects">
+        <!-- <input type="button" value="Fade" name="effect" id="effect"> -->
+        <input type="radio" name="effect" id="none" value="none" checked><label for="none">none</label><br>
+        <input type="radio" name="effect" id="fade" value="fade"><label for="fade">fade</label><br>
+        <input type="radio" name="effect" id="go" value="go"><label for="go">go</label><br>
+        <input type="button" value="Get Effect" name="get_effect" id="get_effect">
+    </form>
     <script src="script.js"></script>
 </body>
 
